--- a/structr-base/src/main/resources/structr/css/schema.css
+++ b/structr-base/src/main/resources/structr/css/schema.css
@@ -104,7 +104,7 @@
 }
 
 #methods-container-left {
-	flex-basis: 25%;
+	flex-basis: 30%;
 	flex-shrink: 1;
 	margin-right: 6px;
 	overflow-y: auto;
